chore: update code style without modify any functions